# build_an_llm_from_scratch

./: README.md  pyproject.toml
src/: data_loader.py  self_attention.py  test_self_attention.py  test_tokenizers.py  tokenizer.py
